--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -28,7 +28,7 @@ jobs:
           run: |
             git config --local user.name "$GITHUB_ACTOR"
             git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
-            git commit -a -m 'new commit' || echo "No changes to commit"
+            git commit -a -m 'Add changes' || echo "No changes to commit"
             #git push || echo "No changes to commit"
 
         - name: Push changes
