--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,13 +23,7 @@ jobs:
           run: |
             Rscript -e 'for (f in commandArgs(TRUE)) if (file.exists(f)) rmarkdown::render(f)' poster.Rmd
 
-        - name: Commit changes
-          run: |
-            git config --local user.name "$GITHUB_ACTOR"
-            git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
-            git commit -a -m 'Add changes' || echo "No changes to commit"
-
-        - name: Push changes
-          uses: ad-m/github-push-action@master
+        - uses: ncipollo/release-action@v1
           with:
-            force_with_lease: true
+            artifacts: "poster.html"
+            bodyFile: "README.md"
